objects/smlfcom__SML_Insights_Messages_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>smlfcom__Insight_Dimension_1__c</fullName>
        <label>Insight Dimension 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Dimension_2__c</fullName>
        <label>Insight Dimension 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Dimension_3__c</fullName>
        <label>Insight Dimension 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Manager_Id__c</fullName>
        <label>Manager Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SML Insights Messages Config</label>
</CustomObject>